--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,12 +5,419 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
 
 body{
     position: relative;
     width: 100%;
-    height: 100vh;
     overflow-x: hidden;
+    background: #fff;
+    scroll-behavior: smooth;
 }
+
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: #000;
+}
+
+header{
+    position: fixed;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
+    height: 10vh;
+    background: #fff;
+    z-index: 10000;
+}
+
+.logo{
+    margin-left: 25px;
+    font-size: 3.25em;
+}
+
+.bag{
+    cursor: pointer;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+    width: 3rem;
+    height: 10vh;
+    margin-right: 20px;
+    font-size: 2.75em;
+}
+
+.counter-container{
+    position: absolute;
+    margin: 15px 15px;
+    padding-top: 8px;
+    font-size: 0.6em;
+    color: #6F6F6E;
+}
+
+nav{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
+}
+
+.toggle{  
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    background: rgba(255, 255, 255, 0.1);
+    color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    font-size: 3em;
+}
+
+.sections{
+    visibility: hidden;
+}
+
+.sections ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sections ul li{
+    width: 65px;
+    height: 65px;
+    text-transform: uppercase;  
+    text-align: center;
+}
+
+.sections li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    font-weight: bold;
+    font-size: 1.25em;
+    transition: 0.5s;
+    transition-delay: calc(0.1s * var(--i));
+}
+
+.active li{
+    transform: translateY(calc(-60px * var(--i)));
+    visibility: visible;
+}
+
+main{
+    margin-top: 10vh;
+    width: 100vw;
+}
+
+/*BAG SHOPPING SECTION*/
+
+.bag-shopping{
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    transition: 1s;
+}
+
+.bag-shopping.active{
+    margin-top: 10vh;
+    width: 100vw;
+    height: auto;
+    background: #fff;
+    z-index: 100;
+    visibility: visible;
+}
+
+.cards-products{
+    padding: 35px 0;
+}
+
+.card-product{
+    background: rgba(0, 0, 0, 0.5);
+    width: 85%;
+    height: 150px;
+    padding: 10px;
+    margin: 15px 25px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    border-radius: 1rem;
+}
+
+.card-product div img{
+    width: 100%;
+    height: 130px;
+}
+
+.card-product div h2{
+    font-size: 1em;
+    padding-bottom: 15px;
+}
+.stock-container{
+    font-size: 1.5em;
+}
+
+.stock-container ion-icon{
+    cursor: pointer;
+}
+
+.stock-container span{
+    margin: 0 20px;
+}
+
+.remove{
+    cursor: pointer;
+    font-size: 2em;
+    align-self: flex-end;
+}
+
+.remove-button{
+    width: 100%;
+    padding: 35px 0;
+    font-size: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.remove-button div{
+    cursor: pointer;
+}
+
+.remove-button div p{
+    font-size: 0.7em;
+}
+
+/*BANNER SECTION*/
+
+.banner-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    width: 100vw;
+    height: 30vh;
+}
+
+.banner-container .directions, .banner-container .flayers{
+    position: absolute;
+}
+
+.directions{
+    width: 100vw; 
+    height: 24vh;  
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 3em;
+    z-index: 1000;
+}
+
+.position{
+    align-self: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pointer{
+    font-size: 0.5em;
+}
+
+.flayers{
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.flayers div{
+    position: absolute;
+}
+
+.flayers div img{
+    max-width: 100%;
+}
+
+/*NEW SECTION*/
+
+.new-container{
+    margin: 25px;
+}
+
+.text{
+    text-align: center;
+}
+
+.text h2{
+    text-transform: uppercase;
+    padding-bottom: 25px;
+}
+
+.text p{
+    font-size: 1.25em;
+}
+
+.new-card{
+    text-align: center;
+}
+
+.img-container img{
+    width: 100%;
+    padding: 25px 0;
+}
+
+.new-card a{
+    background: #fff;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.5em;
+    padding: 10px;
+    border: 1px solid #000;
+}
+
+/*PRODUCTS SECTION*/
+
+.cards{
+    margin: 45px;
+    background: rgba(96, 10, 11, 0.8);
+    border-radius: 0.5rem;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
+}
+
+.description-container{
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.text-container h2{
+    text-transform: uppercase;
+    font-size: 1.25em;
+    padding: 15px 0;
+}
+
+.text-container p{
+    text-transform: uppercase;
+    font-size: 1em;
+}
+
+.agree{
+    font-size: 2.5em;
+    cursor: pointer;
+}
+
+footer{
+    background: #595859;
+    text-align: center;
+}
+
+.text-footer h2{
+    padding: 25px 0;
+    font-size: 1.5em;
+}
+
+.social-media{
+    margin: 25px 0;
+    font-size: 2em;
+    padding-bottom: 25px;
+    border-bottom: 1px solid #111;
+}
+
+.social-media p{
+    font-size: 0.8em;
+    padding-bottom: 25px;
+}
+
+.copyright{
+    padding-bottom: 25px;
+}
+
+
+/*MEDIA QUERIES*/
+
+@media (min-width: 767px) {
+
+    /*BAG SECTION*/
+
+    .card-product{
+        width: 95%;
+    }
+
+    /*BANNER SECTION*/
+
+    .banner-container{
+        height: 30vh;
+    }
+
+    .directions{
+        height: 25vh;
+    }
+
+    /*NEW SECTION*/
+
+    .new-card{
+        transform: translateX(30%);
+        width: 60vw;
+    }
+
+    /*PRODUCTS SECTION*/
+
+    .products{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+
+    .cards{
+        margin: 25px;
+    }
+
+}
+
+
+@media (min-width:992px){
+
+    /*BAG SECTION*/
+
+    .card-product{
+        width: 95%;
+    }
+
+    /*BANNER SECTION*/
+
+    .banner-container{
+        height: 80vh;
+    }
+
+    .directions{
+        height: 70vh;
+    }
+
+    /*NEW SECTION*/
+
+    .new-card{
+        transform: translateX(70%);
+        width: 40vw;
+    }
+
+}
+
