--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -142,12 +142,19 @@ main{
 }
 
 .bag-shopping.active{
-    margin-top: 10vh;
+    position: fixed;
     width: 100vw;
     height: auto;
     background: #fff;
     z-index: 100;
     visibility: visible;
+}
+
+.bag-shopping h2{
+    margin: 35px 0;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.5em;
 }
 
 .cards-products{
@@ -226,27 +233,11 @@ main{
 /*BANNER SECTION*/
 
 .banner-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 100%;
-    width: 100vw;
-    height: 30vh;
+    margin-top: 10vh;
 }
 
 .banner-container .flayers{
-    position: absolute;
-}
-
-.flayers{
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.flayers div{
-    position: absolute;
+    position: relative;
 }
 
 .flayers div img{
@@ -301,9 +292,13 @@ main{
     justify-content: space-around;
 }
 
+.text-container{
+    flex-basis: 75%;
+}
+
 .text-container h2{
     text-transform: uppercase;
-    font-size: 1.25em;
+    font-size: 1.15em;
     padding: 15px 0;
 }
 
@@ -313,6 +308,12 @@ main{
 }
 
 .agree{
+    flex-basis: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100px;
     font-size: 2.5em;
     cursor: pointer;
 }
@@ -349,6 +350,13 @@ footer{
 /*MEDIA QUERIES*/
 
 @media (min-width: 767px) {
+
+    /*BAG SHOPPING*/
+
+    .bag-shopping h2{
+        margin: 35px 0;
+        font-size: 3em;
+    }
 
     /*HEADER SECTION*/
 
