--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Dongle:wght@700&family=Permanent+Marker&display=swap');
 
 * {
     margin: 0;
@@ -13,6 +13,12 @@ body{
     overflow-x: hidden;
     background: #fff;
     scroll-behavior: smooth;
+    font-family: 'Permanent Marker', cursive;
+}
+
+p{
+    font-family: 'Caveat', cursive;
+    font-weight: bold;
 }
 
 li{
@@ -77,7 +83,7 @@ nav{
     position: absolute;
     width: 70px;
     height: 70px;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 1);
     color: #000;
     display: flex;
     justify-content: center;
@@ -149,10 +155,6 @@ main{
     visibility: visible;
 }
 
-.cards-products.disable{
-    display: none;
-}
-
 .card-product{
     background: rgba(0, 0, 0, 0.5);
     width: 85%;
@@ -167,10 +169,6 @@ main{
     transition: 1s;
 }
 
-.card-product.disable{
-    display: none;
-}
-
 .card-product div img{
     width: 100%;
     height: 130px;
@@ -180,11 +178,17 @@ main{
     font-size: 1em;
     padding-bottom: 15px;
 }
+
 .stock-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 1.5em;
 }
 
-.stock-container ion-icon{
+.stock-container p{
+    padding: 10px;
+    font-size: 1.5em;
     cursor: pointer;
 }
 
@@ -272,10 +276,12 @@ main{
 }
 
 .description-container{
+    border-top: 1.25px solid #111;
+    background: rgba(96, 10, 11, 0.4);
     padding: 15px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .text-container{
@@ -284,6 +290,7 @@ main{
 
 .text-container h2{
     text-transform: uppercase;
+    text-align: start;
     font-size: 1.15em;
     padding: 15px 0;
 }
@@ -294,26 +301,36 @@ main{
 }
 
 .agree{
-    flex-basis: 25%;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 50%;
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100px;
+    align-items: flex-start;
+    width: 50px;
+    height: 50px;
     font-size: 2.5em;
     cursor: pointer;
 }
 
+
+
 /*FOOTER SECTION*/
 
 footer{
-    background: #595859;
+    background: #151515;
     text-align: center;
+    color: #D9D9D8;
 }
 
-.text-footer h2{
+footer h2{
     padding: 25px 0;
     font-size: 1.5em;
+}
+
+footer p{
+    font-family: 'Dongle', sans-serif;
+    font-size: 1.75em;
+    line-height: 30px;
 }
 
 .social-media{
@@ -323,7 +340,7 @@ footer{
     border-bottom: 1px solid #111;
 }
 
-.social-media p{
+.social-media h2{
     font-size: 0.8em;
     padding-bottom: 25px;
 }
@@ -336,6 +353,17 @@ footer{
 /*MEDIA QUERIES*/
 
 @media (min-width: 767px) {
+
+    /*BAG SHOPPING*/
+
+    .card-product div h2{
+        margin-top: 25px;
+        font-size: 1.5em;
+    }
+
+    .stock-container p{
+        padding: 25px;
+    }
 
     /*HEADER SECTION*/
 
@@ -409,12 +437,6 @@ footer{
         width: 95%;
     }
 
-    /*BANNER SECTION*/
-
-    .banner-container{
-        height: 30vh;
-    }
-
     /*NEW SECTION*/
 
     .new-container{
@@ -424,6 +446,10 @@ footer{
     .new-card{
         transform: translateX(30%);
         width: 60vw;
+    }
+
+    .text p{
+        font-size: 1.5em;
     }
 
     /*PRODUCTS SECTION*/
@@ -441,21 +467,26 @@ footer{
         margin: 25px;
     }
 
+    /*FOOTER SECTION*/
+
+    .text-information{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .information h2, .us h2{
+        margin-top: 25px;
+    }
+
 }
 
 
 @media (min-width:992px){
 
-    /*BANNER SECTION*/
-
-    .banner-container{
-        height: 80vh;
-    }
-
     /*NEW SECTION*/
 
     .new-container{
-        margin-top: 100px;
+        margin-top: 50px;
     }
 
     .new-card{
