--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -297,7 +297,12 @@ main{
 
 .text-container p{
     text-transform: uppercase;
-    font-size: 1em;
+    font-size: 1.5em;
+}
+
+.text-container p span{
+    text-transform: uppercase;
+    font-size: 1.75em;
 }
 
 .agree{
